# AgroBOT

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  requirements.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
system/: .env
system/services/api-chat/: dockerfile  pyproject.toml
system/services/api-chat/src/api-chat/: main.py
system/services/api-core/src/api-core/: main.py
system/services/api-extractor/: dockerfile  pyproject.toml
system/services/api-extractor/arquivos-testes/: Dados.ods
system/services/api-extractor/arquivos-testes/output/: Planilha1_2024-12-09_08-00-20-00.json  Planilha1_2024-12-10_08-00-20-00.json  Planilha1_2024-12-10_20-00-08-00.json  Planilha1_2024-12-11_08-00-20-00.json  Planilha1_2024-12-11_20-00-08-00.json  Planilha1_2024-12-12_08-00-20-00.json  Planilha1_2024-12-12_20-00-08-00.json
system/services/api-extractor/src/api-extractor/: main.py
system/services/api-llm/: dockerfile  pyproject.toml
system/services/api-llm/src/api-llm/: main.py
system/services/api-telegram/: dockerfile  pyproject.toml
system/services/api-telegram/src/api-telegram/: main.py
